# atlas

./: .gitignore  README.md  clip.py  docker-compose.yml  main.py  pyproject.toml  qwen2vl.py  run_qwen.py
do/: nvidia.sh  python.sh
services/croupier/: main.py  requirements.txt
services/llava/app/: main.py
services/mask-generation/: Dockerfile  README.md  main.py  requirements.txt
services/mask-generation/api/: router.py
services/mask-generation/config/: settings.py
services/qwen2-vl/: Dockerfile  README.md  main.py  requirements.txt
services/workflow-engine/: README.md  main.py
test/: client.py  match.py  prefilter.py
tests/: test_applied.py  test_randomizer.py
tests/applied/: IMG_0172_0.json  IMG_0172_1.json  IMG_0173_0.json  IMG_0173_1.json  IMG_0173_2.json  IMG_0173_3.json  IMG_0174_0.json  IMG_0174_1.json  IMG_0174_2.json  IMG_0174_3.json  IMG_0175_0.json  IMG_0175_1.json  IMG_0176_0.json  IMG_0176_1.json  IMG_0176_2.json  IMG_0176_3.json  IMG_0176_4.json  IMG_0177_0.json  IMG_0177_1.json  IMG_0177_2.json  IMG_0178_0.json  IMG_0178_1.json  IMG_0179_0.json  IMG_0179_1.json  IMG_0180_0.json  IMG_0181_0.json  IMG_0181_1.json  IMG_0181_2.json  IMG_0181_3.json  IMG_0182_0.json  IMG_0182_1.json  IMG_0182_2.json  IMG_0183_0.json  IMG_0183_1.json  IMG_0183_2.json  IMG_0184_0.json  IMG_0184_1.json  IMG_0184_2.json  IMG_0186_0.json  IMG_0187_0.json  (+21 more)
tests/randomizer/: Dockerfile  app.py  data.py  docker.sh
tests/test_run_20241221_190201/: metrics.json
tests/test_run_20241221_191057/: metrics.json
tests/test_run_20241221_191908/: metrics.json
(+23 files in other folders)
